syntax = "proto3";

package contacto;

service ContactoService {
    rpc CreateContacto (CreateContactoRequest) returns (Contacto) {}
    rpc GetContacto (GetContactoRequest) returns (Contacto) {}
    rpc ListContactos (ListContactosRequest) returns (ListContactosResponse) {}
    rpc UpdateContacto (UpdateContactoRequest) returns (Contacto) {}
    rpc DeleteContacto (DeleteContactoRequest) returns (DeleteContactoResponse) {}
}

message Contacto {
    int32 medio_contacto_id = 1;
    string nombre = 2;
    string descripcion = 3;
    bool activo = 4;
    string creadoPor = 5;
    string creadoEn = 6;
}

message CreateContactoRequest {
    string nombre = 1;
    string descripcion = 2;
    bool activo = 3;
    string creadoPor = 4;
}

message GetContactoRequest {
    int32 medioContactoId = 1;
}

message ListContactosRequest {
    int32 page = 1;
    int32 limit = 2;
    string search = 3;
}

message ListContactosResponse {
    repeated Contacto contactos = 1;
    int32 total = 2;
}

message UpdateContactoRequest {
    int32 medioContactoId = 1;
    string nombre = 2;
    string descripcion = 3;
    bool activo = 4;
    string creadoPor = 5;
}

message DeleteContactoRequest {
    int32 medioContactoId = 1;
}

message DeleteContactoResponse {
    bool success = 1;
}
